--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -217,6 +217,9 @@ jobs:
     prod-deploy:
       if: github.ref == 'refs/heads/main'
       needs: docker
+      permissions:
+        id-token: write  # Required for OIDC
+        contents: read   # Required to clone the repo
       environment: 
         name: production
         url: http://${{ steps.set-ingress-host-address.outputs.APP_INGRESS_HOST }}
