--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -237,13 +237,14 @@ jobs:
   
          # GKE context in GCP
         - id: 'auth'
-          name: 'Obtain access token by using workload identity federation'
-          uses: 'google-github-actions/auth@v0'
+          name: 'Authenticate to GCP with Workload Identity Federation'
+          uses: 'google-github-actions/auth@v1'
           with:
+            token_format: 'access_token'
             create_credentials_file: true
-            token_format: access_token
-            workload_identity_provider: projects/${{ env.PROJECT_NUMBER }}/locations/global/workloadIdentityPools/github-actions/providers/github-actions-oidc
-            service_account: github-actions-workflow@${{ env.PROJECT_ID }}.iam.gserviceaccount.com
+            workload_identity_provider: 'projects/${{ env.PROJECT_NUMBER }}/locations/global/workloadIdentityPools/github-actions/providers/github-actions-oidc'
+            service_account: 'github-actions-workflow@${{ env.PROJECT_ID }}.iam.gserviceaccount.com'
+
             
         - name: Connect to GKE
           uses: google-github-actions/get-gke-credentials@v0
