--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -242,8 +242,8 @@ jobs:
           with:
             token_format: 'access_token'
             create_credentials_file: true
-            workload_identity_provider: 'projects/${{ env.PROJECT_NUMBER }}/locations/global/workloadIdentityPools/github-actions/providers/github-actions-oidc'
-            service_account: 'github-actions-workflow@${{ env.PROJECT_ID }}.iam.gserviceaccount.com'
+            workload_identity_provider: 'projects/${{ env.PROJECT_NUMBER }}/locations/global/workloadIdentityPools/github-actions/providers/github-actions-oidc-2'
+            service_account: 'github-actions-workflow-2@${{ env.PROJECT_ID }}.iam.gserviceaccount.com'
 
             
         - name: Connect to GKE
